# baranerdogan-caws-final-project

./: 01_setup_env.ipynb..txt  Dockerfile  README.md  ~$WS Session #5 Notes.docx
CAWS Session #4/: Baran Erdogan.docx  CAWS Session #4 Notes.docx  CAWS Session.docx
CAWS Session #5/: CAWS Session #5 Notes.docx
api/: Dockerfile  pyproject.toml  reference_times.json  validation_expected.json  validation_pieces.csv
api/src/: app.py  diagnose.py
api/tests/: test_diagnose.py
app/: streamlit_app.py
deploy/: README.md  deploy_sagemaker.py
models/: model_metadata.json  xgboost_bath_predictor.joblib
notebooks/: 00_explore_data.ipynb  01_bronze_to_silver.ipynb  02_silver_to_gold.ipynb  03_build_clean_dataset.ipynb  04_analyze_per_matrix.ipynb  05_feature_selection_and_model.ipynb
solutions/: final_exam.md  repos.md
src/vaultech_analysis/: inference.py
